--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
         <li><a href="#"><img src="images/4.jpg" width="100%"></img></a></li>
     </ul>
 </div>
+<div></div>
 
 
-
-<div class="footer"></div>
+<div class="footer flexcontainer">
+    <div class="flex-item">
+        <a href="#"><img src="" alt=""></a>
+    </div>
+    <div class="flex-item">2</div>
+    <div class="flex-item">3</div>
+    <div class="flex-item">4</div>
+</div>
 <script src="js/zepto.min.js"></script>
 <script src="js/mggScrollImg.js"></script>
 <script>
