--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a>
     </div>
     <div class="flex-item">
-          <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a>
+          <a href="gsp.html"><img src="img/home2.png" alt="首页" width="20rem"></a>
     </div>
 </div>
 <script src="js/zepto.min.js"></script>
