--- a/html/gsp.html
+++ b/html/gsp.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>去淘宝</title>
-	<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css">
-	<script src="../js/jquery-1.11.3.min.js"></script>
-    <script src="../js/jquery.mobile-1.4.5.min.js"></script>
+	<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
+	<script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
 	<div data-role="page" id="pageone">
@@ -21,7 +21,7 @@
 		    <a href="#pagetwo" data-role="button" data-shadow="false" data-inline="true" data-transition="slide" data-mini="true">#选择标签</a>
 		    <div>
 		    <h2>分享你的个人信息...</h2>
-		    <a href="#" data-role="button"data-shadow="false" data-corners="false"><img src="../img/add.png"></a>
+		    <a href="#" data-role="button"data-shadow="false" data-corners="false"><img src="img/add.png"></a>
 		    </div>
 		</div>
 		<div data-role="footer" data-theme="f"></div>
@@ -34,34 +34,34 @@
 		<div data-role="content" data-theme="f">
 		<ul data-role="listview" data-inset="true">
 			<li>
-				<a href="#"><img src="../img/1.png" alt="化妆教程" class="ui-li-icon">化妆教程</a>
+				<a href="#"><img src="img/1.png" alt="化妆教程" class="ui-li-icon">化妆教程</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/2.png" alt="护肤心得" class="ui-li-icon">护肤心得</a>
+				<a href="#"><img src="img/2.png" alt="护肤心得" class="ui-li-icon">护肤心得</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/3.png" alt="晒货公举" class="ui-li-icon">晒货公举</a>
+				<a href="#"><img src="img/3.png" alt="晒货公举" class="ui-li-icon">晒货公举</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/4.png" alt="医美整形" class="ui-li-icon">医美整形</a>
+				<a href="#"><img src="img/4.png" alt="医美整形" class="ui-li-icon">医美整形</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/5.png" alt="美姿生活" class="ui-li-icon">美姿生活</a>
+				<a href="#"><img src="img/5.png" alt="美姿生活" class="ui-li-icon">美姿生活</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/6.png" alt="美体瘦身" class="ui-li-icon">美体瘦身</a>
+				<a href="#"><img src="img/6.png" alt="美体瘦身" class="ui-li-icon">美体瘦身</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/7.png" alt="美发美容" class="ui-li-icon">美发美容</a>
+				<a href="#"><img src="img/7.png" alt="美发美容" class="ui-li-icon">美发美容</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/8.png" alt="健康美甲" class="ui-li-icon">健康美甲</a>
+				<a href="#"><img src="img/8.png" alt="健康美甲" class="ui-li-icon">健康美甲</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/9.png" alt="深度卸妆" class="ui-li-icon">深度卸妆</a>
+				<a href="#"><img src="img/9.png" alt="深度卸妆" class="ui-li-icon">深度卸妆</a>
 			</li>
 			<li>
-				<a href="#"><img src="../img/10.png" alt="生活杂记" class="ui-li-icon">生活杂记</a>
+				<a href="#"><img src="img/10.png" alt="生活杂记" class="ui-li-icon">生活杂记</a>
 			</li>
 		</ul>
 		</div>
