--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 <!-- 首页按钮 -->
 <div class="flexcontainer menubox">
     <div class="flex-item">
-        <!--   <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a> -->
         <a href="#"><img src="img/menu1.png" alt="美妆大赏" width="55rem"></a>
     </div>
     <div class="flex-item">
@@ -40,7 +39,17 @@
         <a href="#"><img src="img/menu5.png" alt="美妆大赏" width="55rem"></a>
     </div>
 </div>
-
+<!-- 空白横条 -->
+<div class="blackspace"></div>
+<!-- 显示分享 -->
+<div>
+    <!-- 头像栏 -->
+    <div class="personinfo">
+        <div class="pi-head"><!--头像-->
+            123
+        </div>
+    </div>
+</div>
 <!-- 脚部footer -->
 <div class="footer flexcontainer">
     <div class="flex-item">
