--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="#"><img src="img/menu4.png" alt="美妆大赏" width="55rem"></a>
     </div>
     <div class="flex-item">
-        <a href="#"><img src="img/menu5.png" alt="美妆大赏" width="55rem"></a>
+        <a href="html/tote.html"><img src="img/menu5.png" alt="美妆大赏" width="55rem"></a>
     </div>
 </div>
 <!-- 空白横条 -->
@@ -44,10 +44,63 @@
 <!-- 显示分享 -->
 <div>
     <!-- 头像栏 -->
-    <div class="personinfo">
-        <div class="pi-head"><!--头像-->
-            123
+    <div class="personinfo flexcontainer">
+         <div class="pi-head"> <!--头像-->
+            <img src="img/head1.png" alt="头像" width="100%" height="100%">
         </div>
+        <div class="pi-info">
+            <div class="pi-title">爱丽小屋小烟熏</div>
+            <div class="pi-name">小熊胖胖</div>
+        </div>
+    </div>
+    <div class="rowline"></div>
+    <!-- 数据 -->
+    <div class="flexcontainer data-list">
+        <div class="flex-item dataposi">
+            <a href="#" class="linka"><img src="img/eye.png" alt=""></a>
+        </div>
+        <div class="flex-item dataposi">
+             <a href="#" class="linka"><img src="img/good.png" alt=""></a>
+        </div>
+        <div class="flex-item dataposi">
+             <a href="#" class="linka"><img src="img/message.png" alt=""></a>
+        </div>
+    </div>
+    <!-- 空白横条 -->
+    <div class="blackspace"></div>
+    <div class="sharepic">
+        <a href="#"><img src="img/pic3.jpg" alt="产品图" width="100%"></a>
+    </div>
+</div>
+<div>
+    <!-- 头像栏 -->
+    <div class="personinfo flexcontainer">
+         <div class="pi-head"> <!--头像-->
+            <img src="img/head1.png" alt="头像" width="100%" height="100%">
+        </div>
+        <div class="pi-info">
+            <div class="pi-title">爱丽小屋小烟熏</div>
+            <div class="pi-name">小熊胖胖</div>
+        </div>
+    </div>
+    <div class="rowline"></div>
+    <!-- 数据 -->
+    <div class="flexcontainer data-list">
+        <div class="flex-item dataposi">
+            <a href="#" class="linka"><img src="img/eye.png" alt=""></a>
+        </div>
+        <div class=""></div>
+        <div class="flex-item dataposi">
+             <a href="#" class="linka"><img src="img/good.png" alt=""></a>
+        </div>
+        <div class="flex-item dataposi">
+             <a href="#" class="linka"><img src="img/message.png" alt=""></a>
+        </div>
+    </div>
+    <!-- 空白横条 -->
+    <div class="blackspace"></div>
+    <div class="sharepic">
+        <a href="#"><img src="img/pic3.jpg" alt="产品图" width="100%"></a>
     </div>
 </div>
 <!-- 脚部footer -->
