--- a/html/gsp.html
+++ b/html/gsp.html
@@ -8,17 +8,17 @@
     <script src="../js/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
-	<div data-role="page" id="pageone" style="background-color:#fff;">
-		<div data-role="header" data-theme="f">
-			<a href="#" data-role="button"data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#FB944E;border-radius:100%;">返回</a>
+	<div data-role="page" id="pageone" style="background-color:#fff;color:#F93AA2;">
+		<div data-role="header" style="color:#F93AA2;">
+			<a href="#" data-role="button"data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#fff;border-radius:100%;">返回</a>
 			<h2>我的美丽秘密</h2>
-			<a href="#" data-role="button" data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#FB944E;border-radius:100%;">发布</a>
+			<a href="#pagethr" data-role="button" data-shadow="false" data-theme="d" data-mini="true" data-rel="dialog"style="background-color:#fff;color:#999;border-color:#fff;border-radius:100%;">发布</a>
 		</div>
 		<div data-role="content" data-theme="f" style="background-color:#fff;">
 		    <div class="cover" style="height:150px;">
 		    	<a href="#" data-role="button" data-shadow="false" data-inline="true"style="background-color:#fff;border-color:#fff;color:#CECACA;left:117px;top:30px;">设置封面</a>
 		    </div>
-		    <a href="#pagetwo" data-role="button" data-shadow="false" data-inline="true" data-transition="slide" data-mini="true" style="border-color:#fff;background-color:#F99468;color:#fff;font-weight:lighter;">#选择标签</a>
+		    <a href="#pagetwo" data-role="button" data-shadow="false" data-inline="true" data-transition="slide" data-mini="true" style="border-color:#fff;background-color:#F93AA2;color:#fff;font-weight:lighter;">#选择标签</a>
 		    <div>
 		   		<label for="fname" class="ui-hidden-accessible">分享你的美丽秘密吧……</label>
 				<textarea name="share" id="share" placeholder="分享你的美丽秘密吧……"></textarea>
@@ -28,45 +28,58 @@
 		
 	</div>
 	<div data-role="page" id="pagetwo">
-		<div data-role="header" data-theme="f">	
-		<a href="#pageone" data-role="button"data-shadow="false" data-theme="d"  data-transition="slide" data-direction="reverse" data-mini="true" style="background-color:#fff;border-color:#FB944E;color:#999;border-radius:100%;">返回</a>
+		<div data-role="header" style="color:#F93AA2;">	
+		<a href="#pageone" data-role="button"data-shadow="false" data-theme="d"  data-transition="slide" data-direction="reverse" data-mini="true" style="background-color:#fff;border-color:#fff;color:#999;border-radius:100%;">返回</a>
 			<h2>我的美丽秘密</h2>
 		</div>
-		<div data-role="content" data-theme="f">
+		<div data-role="content" data-theme="f" style="background-color:#fff;">
 		<ul data-role="listview" data-inset="true">
 			<li>
-				<a href="#" style="color:#666;"><img src="../img/1.png" alt="化妆教程" class="ui-li-icon">化妆教程</a>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/1.png" alt="化妆教程" class="ui-li-icon">化妆教程</a>
 			</li>
 			<li>
-				<a href="#" style="color:#666;"><img src="../img/2.png" alt="护肤心得" class="ui-li-icon">护肤心得</a>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/2.png" alt="护肤心得" class="ui-li-icon">护肤心得</a>
 			</li>
 			<li>
-				<a href="#" style="color:#666;"><img src="../img/3.png" alt="晒货公举" class="ui-li-icon">晒货公举</a>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/3.png" alt="晒货公举" class="ui-li-icon">晒货公举</a>
 			</li>
 			<li>
-				<a href="#" style="color:#666;"><img src="../img/4.png" alt="医美整形" class="ui-li-icon">医美整形</a>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/4.png" alt="医美整形" class="ui-li-icon">医美整形</a>
+			</li>
+			</ul>
+			<ul data-role="listview" data-inset="true">
+			<li>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/5.png" alt="美姿生活" class="ui-li-icon">美姿生活</a>
 			</li>
 			<li>
-				<a href="#" style="color:#666;"><img src="../img/5.png" alt="美姿生活" class="ui-li-icon">美姿生活</a>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/6.png" alt="美体瘦身" class="ui-li-icon">美体瘦身</a>
 			</li>
 			<li>
-				<a href="#" style="color:#666;"><img src="../img/6.png" alt="美体瘦身" class="ui-li-icon">美体瘦身</a>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/7.png" alt="美发美容" class="ui-li-icon">美发美容</a>
 			</li>
 			<li>
-				<a href="#" style="color:#666;"><img src="../img/7.png" alt="美发美容" class="ui-li-icon">美发美容</a>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/8.png" alt="健康美甲" class="ui-li-icon">健康美甲</a>
+			</li>
+			</ul>
+			<ul data-role="listview" data-inset="true">
+			<li>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/9.png" alt="深度卸妆" class="ui-li-icon">深度卸妆</a>
 			</li>
 			<li>
-				<a href="#" style="color:#666;"><img src="../img/8.png" alt="健康美甲" class="ui-li-icon">健康美甲</a>
-			</li>
-			<li>
-				<a href="#" style="color:#666;"><img src="../img/9.png" alt="深度卸妆" class="ui-li-icon">深度卸妆</a>
-			</li>
-			<li>
-				<a href="#" style="color:#666;"><img src="../img/10.png" alt="生活杂记" class="ui-li-icon">生活杂记</a>
+				<a href="#" style="color:#666;background-color:#fff;"><img src="../img/10.png" alt="生活杂记" class="ui-li-icon">生活杂记</a>
 			</li>
 		</ul>
 		</div>
 		
+	</div>
+	<div data-role="page" id="pagethr"style="width:65%;height:50%;color:#999;background-color:#fff;left:40px;margin:100px 30px">
+		<div data-role="header"style="background:#F93AA2;color:#FFFFFF;">
+			<h4>消息提示</h4>
+		</div>
+		<div data-role="content"style="color:#F93AA2;background-color:#FFFFFF;margin:0 20px 0 35px;" >
+			<img src="../img/main.gif">
+			<h4>发布成功！</h4>
+		</div>
 	</div>
 </body>
 </html>
