--- a/html/gsp.html
+++ b/html/gsp.html
@@ -16,7 +16,7 @@
 		</div>
 		<div data-role="content" data-theme="f" style="background-color:#fff;">
 		    <div class="cover" style="height:150px;">
-		    	<a href="#" data-role="button" data-shadow="false" data-inline="true"style="background-color:#fff;border-color:#fff;color:#CECACA;left:117px;top:30px;">设置封面</a>
+		    	<a href="#" data-role="button" data-shadow="false" data-inline="true"style="background-color:#fff;border-color:#fff;color:#CECACA;left:138px;top:30px;">设置封面</a>
 		    </div>
 		    <a href="#pagetwo" data-role="button" data-shadow="false" data-inline="true" data-transition="slide" data-mini="true" style="border-color:#fff;background-color:#F93AA2;color:#fff;font-weight:lighter;">#选择标签</a>
 		    <div>
@@ -76,7 +76,7 @@
 		<div data-role="header"style="background:#F93AA2;color:#FFFFFF;">
 			<h4>消息提示</h4>
 		</div>
-		<div data-role="content"style="color:#F93AA2;background-color:#FFFFFF;margin:0 20px 0 35px;" >
+		<div data-role="content"style="color:#F93AA2;background-color:#FFFFFF;margin:0 20px 0 35px;font-weight:300;" >
 			<img src="../img/main.gif">
 			<h4>发布成功！</h4>
 		</div>
