--- a/html/ttw.html
+++ b/html/ttw.html
@@ -103,7 +103,7 @@
 	</div>
 	</div>
 	<div data-role="page" id="pagethr"style="width:70%;color:#999;left:40px;margin:120px 20px">
-		<div data-role="header">
+		<div data-role="header" style="background-color:#F93AA2;color:#FFFFFF;">
 			<h1>美妆秘密</h1>
 		</div>
 		<div data-role="content" >
