--- a/html/tote.html
+++ b/html/tote.html
@@ -42,7 +42,7 @@
 	<div class="blackspace"></div>
 	<div class="totebox">
 		<div class="totepic">
-			<a href="../index.html"><img src="../img/totepic1.jpg" alt="大赏图片" width="100%">
+			<a href="../html/hfbd.html"><img src="../img/totepic1.jpg" alt="大赏图片" width="100%">
 			</a>
 		</div>
 		<div>
