--- a/html/gsp.html
+++ b/html/gsp.html
@@ -6,11 +6,54 @@
 	<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css">
 	<script src="../js/jquery-1.11.3.min.js"></script>
     <script src="../js/jquery.mobile-1.4.5.min.js"></script>
+    <!--<style>
+    	.linka{
+    	    display: block;
+    	}
+    	.header{
+    	    width: 100%;
+    	    height: 4rem;
+    	    background-color: #fff;
+    	    border-bottom: 0.08rem solid #E5E2E2;
+    	    position: fixed;
+    	    top: 0px;
+    	    left: 0px;
+    	    margin-bottom: 9rem;
+    	}
+		.backposi{
+		    width: 1.7rem;
+		    height: 1.7rem;
+		    margin-top: 1rem;
+		    margin-left: 1rem;
+		    float: left;
+		     overflow: hidden;
+		}
+		.moreposi{
+		    width: 1.7rem;
+		    height: 1.7rem;
+		    overflow: hidden;
+		    float: right;
+		    margin-right: 2rem;
+		    margin-top: 1rem;
+		}
+    </style>-->
 </head>
 <body>
 	<div data-role="page" id="pageone" style="background-color:#fff;">
 		<div data-role="header" data-theme="f">
-			<a href="#" data-role="button"data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#FB944E;border-radius:100%;">返回</a>
+		<!-- <div class="header">
+			<div class="backposi">
+			<a href="../index.html" class="linka" >
+				<img src="../img/back.png" alt="返回" width="100%">
+			</a>
+		</div>
+		<div class="totetext"></div>
+		<div class="moreposi">
+			<a href="#" class="linka">
+				<img src="../img/more.png" alt="更多" width="100%">
+			</a>
+		</div> -->
+			<a href="../index.html" data-role="button"data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#FB944E;border-radius:100%;" data-ajax="false">返回</a>
 			<h2>我的美丽秘密</h2>
 			<a href="#" data-role="button" data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#FB944E;border-radius:100%;">发布</a>
 		</div>
