--- a/html/tote.html
+++ b/html/tote.html
@@ -21,12 +21,15 @@
 				<img src="../img/back.png" alt="返回" width="100%">
 			</a>
 		</div>
-		<div class="totetext"></div>
-		<div class="moreposi">
+		<div class="headerbox">
+		去淘宝口碑排名
+			<!-- <p class="header-text">去淘宝口碑排名</p> -->
+		</div>
+		<!-- <div class="moreposi">
 			<a href="#" class="linka">
 				<img src="../img/more.png" alt="更多" width="100%">
 			</a>
-		</div>
+		</div> -->
 	</div>
 	<!-- 大赏图片及文字 -->
 	<div class="totebox" style="margin-top:2rem;">
