--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
 <!-- 脚部footer -->
 <div class="footer flexcontainer">
     <div class="flex-item">
-        <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a>
+        <a href="html/login.html"><img src="img/home2.png" alt="首页" width="20rem"></a>
     </div>
     <div class="flex-item">
-          <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a>
+          <a href="html/register.html"><img src="img/home2.png" alt="首页" width="20rem"></a>
     </div>
     <div class="flex-item">
-        <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a>
+       <a href="html/gsp.html"><img src="img/home2.png" alt="首页" width="20rem"></a>
     </div>
     <div class="flex-item">
-          <a href="html/gsp.html"><img src="img/home2.png" alt="首页" width="20rem"></a>
+        <a href="html/ttw.html"><img src="img/home2.png" alt="首页" width="20rem"></a>
     </div>
 </div>
 <script src="js/zepto.min.js"></script>
