--- a/html/login.html
+++ b/html/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>去淘宝</title>
+	<title>注册登录</title>
 	<meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content = "width=device-width, target-densitydpi=high-dpi, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -11,7 +11,19 @@
 	<meta content="telephone=no" name="format-detection" />
 	<meta name="keywords" content="seokeywords"/>
 	<meta name="description" content="seodescription"/>
-	<link rel="stylesheet" href="../css/totelist1.css">
+	<link rel="stylesheet" href="../css/login.css">
+	<script type="text/javascript">
+		function login(){
+			var userName=document.getElementById("userName").value;
+			var pwd=document.getElementById("pwd").value;
+			var matchResult=true;
+			if(userName=""||pwd=""){
+				alert("请填写完整！");
+				matchResult=false;
+			}
+			else if(userName.)
+		}
+	</script>
 </head>
 <body>
 	<!-- 头部 -->
@@ -21,21 +33,29 @@
 				<img src="../img/back.png" alt="返回" width="100%">
 			</a>
 		</div>
-		<div class="totetext"></div>
+		<div class="headerbox">
+		登录
+			<!-- <p class="header-text">去淘宝口碑排名</p> -->
+		</div>
 		<!-- <div class="moreposi">
 			<a href="#" class="linka">
 				<img src="../img/more.png" alt="更多" width="100%">
 			</a>
 		</div> -->
-		
 	</div>
-	<!-- 图片 -->
-	<div class="toppic">
-		<img src="../img/totepic2.jpg" alt="美妆大赏图片" width="100%">
+	<!-- 注册部分 -->
+	<div class="registerbox">
+		<div class="rowline"></div>
+		<div class="namebox">
+			<input type="text" class="inputbox" placeholder="昵称" id="userName">
+		</div>
+		<div class="rowline"></div>
+		<div class="password">
+			<input type="password" class="inputbox" placeholder="请输入密码" id="pwd">
+		</div>
 	</div>
-	<!-- 护肤 -->
-	<div class="rowline" width="80%"></div>
-	<div></div>
-	<!-- <div class="blackspace"></div> -->
+	<div class="buttonbox">
+		<button class="buttontext" type="submit">立即登录</button>
+	</div>
 </body>
 </html>
