--- a/html/ttw.html
+++ b/html/ttw.html
@@ -6,22 +6,97 @@
 	<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css">
 	<script src="../js/jquery-1.11.3.min.js"></script>
     <script src="../js/jquery.mobile-1.4.5.min.js"></script>
+    <style>
+    	/*
+	    body,html,div,ul,li{margin:0;padding:0;}
+	    @media screen and (min-width:240px) {
+	        html, body{
+	            font-size:9px;
+	        }
+	    }
+	    @media screen and (min-width:320px) {
+	        html, body{
+	            font-size:12px;
+	        }
+	    }
+	    @media screen and (min-width:480px) {
+	        html, body{
+	        font-size:18px;
+	        }
+	    }
+	    @media screen and (min-width:640px) {
+	        html, body{
+	            font-size:24px;
+	        }
+	    }
+	    @media screen and (min-width:960px) {
+	        html, body{
+	            font-size:36px;
+	        }
+	    }*/
+		.headpic{
+			width:43px;
+			height: 43px;
+			background-color: white;
+			border-radius: 50px;
+			overflow: hidden;
+			float: left;
+			margin-left: 10px;
+			margin-right: 10px;
+		}
+		.headinfo-name{
+			width: 200px;
+			height: 30px;
+			
+			
+			/*padding-: 40px;*/
+		}
+		.nametext{
+			color: #676565;
+			font-size: 15px;
+			padding-left: 50px;
+			text-align: auto;
+			line-height: 
+		}
+		.rowline{
+			/*border-color: #777;*/
+			width: 70%;
+			border-top:1px solid #ccc;
+			margin-top: 0px;
+			height: 0px;
+		}
+		
+    </style>
 </head>
 <body>
 	<div data-role="page" id="pageone" >
-		<div data-role="header" data-position="fixed">
-		<a href="#" data-role="button" data-shadow="false"style="color:#FC5FA8;border-color:#fff;border-radius:100%">添加</a>
+		<div data-role="header" data-position="fixed" height="50px">
+		<a href="../index.html" data-role="button" data-shadow="false"style="color:#FC5FA8;border-color:#fff;border-radius:100%" data-ajax="false">返回</a>
 		<h2>个人中心</h2> 
 		<a href="#pagetwo" data-role="button" data-shadow="false"style="color:#FC5FA8;border-color:#fff;border-radius:100%">设置</a>
 		</div>
 		<div data-role="content" style="background-color:#fff;">
-		
-		<div data-role="controlgroup" data-type="horizontal"style="margin:33px 0 0 125px;" >
-				<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">心得</a>
-				<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">点评</a>
-				<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">关注</a>
-				<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">粉丝</a>
-		</div>
+			<div class="headpart">
+				<div class="headpic">
+					<img src="../img/head1.png" alt="头像" width="100%">
+				</div>
+				<div class="headinfo">
+					<div class="headinfo-name">
+						<p class="nametext" style="margin-left:20px;">熊猫胖胖Panda</p>
+					</div>
+					<div class="rowline" style="margin-left:60px;"></div>
+				</div>
+			</div>
+			<!-- <div class="headpic">
+				<img src="../img/head1.png" alt="头像" width="100%">
+			</div> -->
+			<div data-role="controlgroup" data-type="horizontal" style="padding-left:20px;">					
+						<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">心得</a>
+						<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">点评</a>
+						<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">关注</a>
+						<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">粉丝</a>
+			</div>
+			<!-- </div> -->
 		
 		<ul data-role="listview" data-inset="true" >
 			<li>
