--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#"><img src="img/menu2.png" alt="美妆大赏" width="55rem"></a>
     </div>
     <div class="flex-item">
-        <a href="#"><img src="img/menu3.png" alt="美妆大赏" width="55rem"></a>
+        <a href="html/test.html"><img src="img/menu3.png" alt="美妆大赏" width="55rem"></a>
     </div>
     <div class="flex-item">
         <a href="#"><img src="img/menu4.png" alt="美妆大赏" width="55rem"></a>
