--- a/html/hfbd.html
+++ b/html/hfbd.html
@@ -33,11 +33,11 @@
         <div class="rowline" width="85%"></div>
         <!-- 护肤品分类 -->
         <div class="ds-classify">
-            <a href="#">
-                <img  class="ds-one" src="../img/jiemianru.png" alt="护肤品榜单" width="25%">
+            <a href="../html/hflist.html">
+                <img  class="ds-one" src="../img/shuangfushui.png" alt="护肤品榜单" width="25%">
             </a>
             <a href="#">
-                <img src="../img/shuangfushui.png" alt="护肤品榜单" width="25%">
+                <img src="../img/jiemianru.png" alt="护肤品榜单" width="25%">
             </a>
             <a href="#">
                 <img src="../img/ruye.png" alt="护肤品榜单" width="25%">
