--- a/html/gsp.html
+++ b/html/gsp.html
@@ -58,7 +58,7 @@
 <!-- ======= -->
 	<div data-role="page" id="pageone" style="background-color:#fff;color:#F93AA2;">
 		<div data-role="header" style="color:#F93AA2;">
-			<a href="../index.html" data-role="button"data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#fff;border-radius:100%;" data-ajax="false">返回</a>
+			<a href="../html/firstpage.html" data-role="button"data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#fff;border-radius:100%;" data-ajax="false">返回</a>
 <!-- >>>>>>> 1f022e852c5f0e6c07879ebdef36e00fcb547058 -->
 			<h2>我的美丽秘密</h2>
 			<a href="#pagethr" data-role="button" data-shadow="false" data-theme="d" data-mini="true" data-rel="dialog"style="background-color:#fff;color:#999;border-color:#fff;border-radius:100%;">发布</a>
