--- a/html/register.html
+++ b/html/register.html
@@ -67,7 +67,7 @@
 	<!-- 头部 -->
 	<div class="header">
 		<div class="backposi">
-			<a href="../html/index.html" class="linka">
+			<a href="../html/firstpage.html" class="linka">
 				<img src="../img/back.png" alt="返回" width="100%">
 			</a>
 		</div>
