--- a/html/ttw.html
+++ b/html/ttw.html
@@ -75,7 +75,7 @@
 	<div data-role="page" id="pageone" >
 <!-- <<<<<<< HEAD -->
 		<div data-role="header" data-position="fixed" height="50px">
-		<a href="../index.html" data-role="button" data-shadow="false"style="color:#FC5FA8;border-color:#fff;border-radius:100%" data-ajax="false">返回</a>
+		<a href="../html/firstpage.html" data-role="button" data-shadow="false"style="color:#FC5FA8;border-color:#fff;border-radius:100%" data-ajax="false">返回</a>
 <!-- ======= -->
 		<!-- <div data-role="header" data-position="fixed">
 		<a href="#" data-role="button" data-shadow="false"style="color:#FC5FA8;background-color:#fff;border-color:#fff;border-radius:100%">添加</a> -->
