--- a/html/firstpage.html
+++ b/html/firstpage.html
@@ -106,10 +106,10 @@
 <!-- 脚部footer -->
 <div class="footer flexcontainer">
     <div class="flex-item">
-        <a href="html/login.html"><img src="../img/home2.png" alt="首页" width="20rem"></a>
+        <a href="../html/login.html"><img src="../img/home2.png" alt="首页" width="20rem"></a>
     </div>
     <div class="flex-item">
-          <a href="html/register.html"><img src="../img/home2.png" alt="首页" width="20rem"></a>
+          <a href="../html/register.html"><img src="../img/home2.png" alt="首页" width="20rem"></a>
     </div>
     <div class="flex-item">
        <a href="../html/gsp.html"><img src="../img/home2.png" alt="首页" width="20rem"></a>
