--- a/html/login.html
+++ b/html/login.html
@@ -39,7 +39,7 @@
 	<!-- 头部 -->
 	<div class="header">
 		<div class="backposi">
-			<a href="../index.html" class="linka">
+			<a href="../html/firstpage.html" class="linka">
 				<img src="../img/back.png" alt="返回" width="100%">
 			</a>
 		</div>
