--- a/html/shdz.html
+++ b/html/shdz.html
@@ -76,7 +76,18 @@ body,html,div,ul,li{margin:0;padding:0;}
     margin-right: 2rem;
     margin-top: 1rem;
 }
+.bl{
+	vertical-align: text-bottom;
+	width: 100%;
+	height: 2.5rem;
+	border-bottom: 2px solid #aeb0b2;
+}
+input{
+	border: none;
+}
 	</style>
+}
+}
 </head>
 <body>
 	<div class="header">
@@ -92,5 +103,16 @@ body,html,div,ul,li{margin:0;padding:0;}
 			</a>
 		</div>
 	</div>
-	
+	<!-- end header -->
+	<div style="margin-top:3rem;">
+		<form method="post" action="#">
+			<div class="bl">
+				收货人姓名：<input type="text" name="kehuname" id="kehuname" />
+			</div>
+			<div class="bl">
+			手机号码：<input type="text" name="tel">
+			</div>
+			<div class="bl"></div>
+		</form>
+	</div>
 </body>
