--- a/html/firstpage.html
+++ b/html/firstpage.html
@@ -20,6 +20,7 @@
         <li><a href="#"><img src="../img/2.jpg" width="100%"></img></a></li>
         <li><a href="#"><img src="../img/4.jpg" width="100%"></img></a></li>
     </ul>
+    <a href="##"><img src="../img/fp-search.png" class="fp-search"></a>
 </div>
 <!-- 首页按钮 -->
 <div class="flexcontainer menubox">
