--- a/html/searchpart.html
+++ b/html/searchpart.html
@@ -10,9 +10,17 @@
     <meta name="keywords" content="seokeywords"/>
     <meta name="description" content="seodescription"/>
     <link rel="stylesheet" href="../css/searchpart.css">
+    <link rel="stylesheet" href="../css/totelist1.css">
     <title>首页</title>
     </head>
     <body>
+        <div class="header">
+            <div class="backposi">
+                <a href="../html/firstpage.html" class="linka">
+                    <img src="../img/back.png" alt="返回" width="100%">
+                </a>
+            </div>
+        </div>
         <div class="partone">
             <img src="../img/fp-search.png" alt="se-now" class="se-now">
             <div class="sousou">
