--- a/index.html
+++ b/index.html
@@ -12,136 +12,21 @@
     <meta name="keywords" content="seokeywords"/>
     <meta name="description" content="seodescription"/>
     <link rel="stylesheet" href="css/index.css">
+    <!--5秒钟后跳转到指定的页面--> 
+    <meta http-equiv="refresh" content="3;url=html/firstpage.html" /> 
+    <script></script> 
 </head>
-<<<<<<< HEAD
 <body>
+    <!-- <div class="imgbox"> -->
+       <div class="imgbox1">
+           <img src="img/indeximg1.png" alt="首页美妆图片广告" height="100%" width="100%">
+       </div>
+       <div class="imgbox2">
+           <img src="img/indeximg2.png" alt="首页logo" height="100%" width="100%">
+       </div>
     
-=======
-<body> 
-<!-- 轮播图片 -->
-<div class="imgbox"> 
-    <ul>
-        <li><a href="#"><img src="img/1.jpg" width="100%"></img></a></li>
-        <li><a href="#"><img src="img/2.jpg" width="100%"></img></a></li>
-        <li><a href="#"><img src="img/4.jpg" width="100%"></img></a></li>
-    </ul>
-</div>
-<!-- 首页按钮 -->
-<div class="flexcontainer menubox">
-    <div class="flex-item">
-        <a href="#"><img src="img/menu1.png" alt="美妆大赏" width="55rem"></a>
-    </div>
-    <div class="flex-item">
-        <a href="#"><img src="img/menu2.png" alt="美妆大赏" width="55rem"></a>
-    </div>
-    <div class="flex-item">
-        <a href="html/test.html"><img src="img/menu3.png" alt="美妆大赏" width="55rem"></a>
-    </div>
-    <div class="flex-item">
-        <a href="#"><img src="img/menu4.png" alt="美妆大赏" width="55rem"></a>
-    </div>
-    <div class="flex-item">
-        <a href="html/tote.html"><img src="img/menu5.png" alt="美妆大赏" width="55rem"></a>
-    </div>
-</div>
-<!-- 空白横条 -->
-<div class="blackspace"></div>
-<!-- 显示分享 -->
-<div>
-    <!-- 头像栏 -->
-    <div class="personinfo flexcontainer">
-         <div class="pi-head"> <!--头像-->
-            <img src="img/head1.png" alt="头像" width="100%" height="100%">
-        </div>
-        <div class="pi-info">
-            <div class="pi-title">爱丽小屋小烟熏</div>
-            <div class="pi-name">小熊胖胖</div>
-        </div>
-    </div>
-    <div class="rowline"></div>
-    <!-- 数据 -->
-    <div class="flexcontainer data-list">
-        <div class="flex-item dataposi">
-            <a href="#" class="linka"><img src="img/eye.png" alt=""></a>
-        </div>
-        <div class="flex-item dataposi">
-             <a href="#" class="linka"><img src="img/good.png" alt=""></a>
-        </div>
-        <div class="flex-item dataposi">
-             <a href="#" class="linka"><img src="img/message.png" alt=""></a>
-        </div>
-    </div>
-    <!-- 空白横条 -->
-    <div class="blackspace"></div>
-    <div class="sharepic">
-        <a href="#"><img src="img/pic3.jpg" alt="产品图" width="100%"></a>
-    </div>
-</div>
-<div>
-    <!-- 头像栏 -->
-    <div class="personinfo flexcontainer">
-         <div class="pi-head"> <!--头像-->
-            <img src="img/head1.png" alt="头像" width="100%" height="100%">
-        </div>
-        <div class="pi-info">
-            <div class="pi-title">爱丽小屋小烟熏</div>
-            <div class="pi-name">小熊胖胖</div>
-        </div>
-    </div>
-    <div class="rowline"></div>
-    <!-- 数据 -->
-    <div class="flexcontainer data-list">
-        <div class="flex-item dataposi">
-            <a href="#" class="linka"><img src="img/eye.png" alt=""></a>
-        </div>
-        <div class=""></div>
-        <div class="flex-item dataposi">
-             <a href="#" class="linka"><img src="img/good.png" alt=""></a>
-        </div>
-        <div class="flex-item dataposi">
-             <a href="#" class="linka"><img src="img/message.png" alt=""></a>
-        </div>
-    </div>
-    <!-- 空白横条 -->
-    <div class="blackspace"></div>
-    <div class="sharepic">
-        <a href="#"><img src="img/pic3.jpg" alt="产品图" width="100%"></a>
-    </div>
-</div>
-<!-- 脚部footer -->
-<div class="footer flexcontainer">
-    <div class="flex-item">
-        <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a>
-    </div>
-    <div class="flex-item">
-          <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a>
-    </div>
-    <div class="flex-item">
-        <a href="#"><img src="img/home2.png" alt="首页" width="20rem"></a>
-    </div>
-    <div class="flex-item">
-          <a href="html/gsp.html"><img src="img/home2.png" alt="首页" width="20rem"></a>
-    </div>
-</div>
-<script src="js/zepto.min.js"></script>
-<script src="js/mggScrollImg.js"></script>
-<script>
-(function(){
-/*
-    注意：$.mggScrollImg返回的scrollImg对象上有
-            next，prev，go三个方法，可以实现外部对滚动索引的控制。
-    如：scrollImg.next();//会切换到下一张图片
-        scrollImg.go(0);//会切换到第一张图片
-*/
-var scrollImg = $.mggScrollImg('.imgbox ul',{
-        loop : true,//循环切换
-        auto : true,//自动切换
-        callback : function(ind){//这里传过来的是索引值
-            $('#page').text(ind+1);
-        }
-    });
-})()
-</script>
->>>>>>> baaabe75861f6dd306e914c41af9b00927a0a960
+        <!-- <div class="bottom-box"></div> -->
+    <!-- </div> -->
 </body>
+   
 </html>
