--- a/html/searchpart.html
+++ b/html/searchpart.html
@@ -22,7 +22,9 @@
             </div>
         </div>
         <div class="partone">
-            <img src="../img/fp-search.png" alt="se-now" class="se-now">
+            <div class="se-now">
+                <img src="../img/fp-search.png" alt="se-now" width="100%">
+            </div>
             <div class="sousou">
                 <div class="se-btn">
                     <a href="##">搜一搜</a>
