--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="seodescription"/>
     <link rel="stylesheet" href="css/index.css">
     <!--5秒钟后跳转到指定的页面--> 
-    <meta http-equiv="refresh" content="3;url=html/firstpage.html" /> 
+    <meta http-equiv="refresh" content="3;url=html/firstframe.html" /> 
     <script></script> 
 </head>
 <body>
