--- a/html/firstpage.html
+++ b/html/firstpage.html
@@ -13,120 +13,120 @@
 <title>首页</title>
 </head>
 <body> 
-<!-- 轮播图片 -->
-<div class="imgbox"> 
-    <ul>
-        <li><a href="#"><img src="../img/1.jpg" width="100%"></img></a></li>
-        <li><a href="#"><img src="../img/2.jpg" width="100%"></img></a></li>
-        <li><a href="#"><img src="../img/4.jpg" width="100%"></img></a></li>
-    </ul>
-    <a href="../html/searchpart.html"><img src="../img/fp-search.png" class="fp-search"></a>
-</div>
-<!-- 首页按钮 -->
-<div class="flexcontainer menubox">
-    <div class="flex-item">
-        <a href="../html/searchpart.html"><img src="../img/menu1.png" alt="产品库" width="55rem"></a>
+    <!-- 轮播图片 -->
+    <div class="imgbox"> 
+        <ul>
+            <li><a href="#"><img src="../img/1.jpg" width="100%"></img></a></li>
+            <li><a href="#"><img src="../img/2.jpg" width="100%"></img></a></li>
+            <li><a href="#"><img src="../img/4.jpg" width="100%"></img></a></li>
+        </ul>
+        <a href="../html/searchpart.html"><img src="../img/fp-search.png" class="fp-search"></a>
     </div>
-    <!-- <div class="flex-item">
-        <a href="#"><img src="../img/menu2.png" alt="学习化妆" width="55rem"></a>
+    <!-- 首页按钮 -->
+    <div class="flexcontainer menubox">
+        <div class="flex-item">
+            <a href="../html/searchpart.html"><img src="../img/menu1.png" alt="产品库" width="55rem"></a>
+        </div>
+        <!-- <div class="flex-item">
+            <a href="#"><img src="../img/menu2.png" alt="学习化妆" width="55rem"></a>
+        </div> -->
+        <div class="flex-item">
+            <a href="../html/test.html"><img src="../img/menu3.png" alt="产品试用" width="55rem"></a>
+        </div>
+        <div class="flex-item">
+            <a href="#"><img src="../img/menu4.png" alt="签到" width="55rem"></a>
+        </div>
+        <div class="flex-item">
+            <a href="../html/tote.html"><img src="../img/menu5.png" alt="美妆大赏" width="55rem"></a>
+        </div>
+    </div>
+    <!-- 空白横条 -->
+    <div class="blackspace"></div>
+    <!-- 显示分享 -->
+    <div>
+        <!-- 头像栏 -->
+        <div class="personinfo flexcontainer">
+             <div class="pi-head"> <!--头像-->
+                <img src="../img/head1.png" alt="头像" width="100%" height="100%">
+            </div>
+            <div class="pi-info">
+                <div class="pi-title">爱丽小屋小烟熏</div>
+                <div class="pi-name">小熊胖胖</div>
+            </div>
+        </div>
+        <div class="rowline"></div>
+        <!-- 数据 -->
+        <div class="flexcontainer data-list">
+            <div class="flex-item dataposi">
+                <a href="#" class="linka"><img src="../img/eye.png" alt=""></a>
+            </div>
+            <div class="flex-item dataposi">
+                 <a href="#" class="linka"><img src="../img/good.png" alt=""></a>
+            </div>
+            <div class="flex-item dataposi">
+                 <a href="#" class="linka"><img src="../img/message.png" alt=""></a>
+            </div>
+        </div>
+        <!-- 空白横条 -->
+        <div class="blackspace"></div>
+        <div class="sharepic">
+            <a href="#"><img src="../img/pic3.jpg" alt="产品图" width="100%"></a>
+        </div>
+    </div>
+    <div>
+        <!-- 头像栏 -->
+        <div class="personinfo flexcontainer">
+             <div class="pi-head"> <!--头像-->
+                <img src="../img/head1.png" alt="头像" width="100%" height="100%">
+            </div>
+            <div class="pi-info">
+                <div class="pi-title">爱丽小屋小烟熏</div>
+                <div class="pi-name">小熊胖胖</div>
+            </div>
+        </div>
+        <div class="rowline"></div>
+        <!-- 数据 -->
+        <div class="flexcontainer data-list">
+            <div class="flex-item dataposi">
+                <a href="#" class="linka"><img src="../img/eye.png" alt=""></a>
+            </div>
+            <div class=""></div>
+            <div class="flex-item dataposi">
+                 <a href="#" class="linka"><img src="../img/good.png" alt=""></a>
+            </div>
+            <div class="flex-item dataposi">
+                 <a href="#" class="linka"><img src="../img/message.png" alt=""></a>
+            </div>
+        </div>
+        <!-- 空白横条 -->
+        <div class="blackspace"></div>
+        <div class="sharepic">
+            <a href="#"><img src="../img/pic3.jpg" alt="产品图" width="100%"></a>
+        </div>
+    </div>
+    <!-- 脚部footer -->
+    <!-- <div class="footer flexcontainer">
+        <div class="flex-item">
+            <div class="buttonbox buttonbox1" >
+                 <a id="a1" class="buttononNav"><img src="../img/home2.png" alt="首页" width="20rem" class="homeimg"></a>
+            </div>
+        </div>
+        <div class="flex-item">
+            <div class="buttonbox buttonbox2" >
+                <a><img src="../img/home2.png" alt="首页" width="20rem"></a>
+            </div>
+        </div>
+        <div class="flex-item">
+            <div class="buttonbox buttonbox3">
+                <a><img src="../img/home2.png" alt="首页" width="20rem"></a>
+            </div>
+        </div>
+        <div class="flex-item">
+            <div class="buttonbox buttonbox4">
+                 <a><img src="../img/home2.png" alt="首页" width="20rem"></a>
+            </div>
+        </div>
     </div> -->
-    <div class="flex-item">
-        <a href="../html/test.html"><img src="../img/menu3.png" alt="产品试用" width="55rem"></a>
-    </div>
-    <div class="flex-item">
-        <a href="#"><img src="../img/menu4.png" alt="签到" width="55rem"></a>
-    </div>
-    <div class="flex-item">
-        <a href="../html/tote.html"><img src="../img/menu5.png" alt="美妆大赏" width="55rem"></a>
-    </div>
-</div>
-<!-- 空白横条 -->
-<div class="blackspace"></div>
-<!-- 显示分享 -->
-<div>
-    <!-- 头像栏 -->
-    <div class="personinfo flexcontainer">
-         <div class="pi-head"> <!--头像-->
-            <img src="../img/head1.png" alt="头像" width="100%" height="100%">
-        </div>
-        <div class="pi-info">
-            <div class="pi-title">爱丽小屋小烟熏</div>
-            <div class="pi-name">小熊胖胖</div>
-        </div>
-    </div>
-    <div class="rowline"></div>
-    <!-- 数据 -->
-    <div class="flexcontainer data-list">
-        <div class="flex-item dataposi">
-            <a href="#" class="linka"><img src="../img/eye.png" alt=""></a>
-        </div>
-        <div class="flex-item dataposi">
-             <a href="#" class="linka"><img src="../img/good.png" alt=""></a>
-        </div>
-        <div class="flex-item dataposi">
-             <a href="#" class="linka"><img src="../img/message.png" alt=""></a>
-        </div>
-    </div>
-    <!-- 空白横条 -->
-    <div class="blackspace"></div>
-    <div class="sharepic">
-        <a href="#"><img src="../img/pic3.jpg" alt="产品图" width="100%"></a>
-    </div>
-</div>
-<div>
-    <!-- 头像栏 -->
-    <div class="personinfo flexcontainer">
-         <div class="pi-head"> <!--头像-->
-            <img src="../img/head1.png" alt="头像" width="100%" height="100%">
-        </div>
-        <div class="pi-info">
-            <div class="pi-title">爱丽小屋小烟熏</div>
-            <div class="pi-name">小熊胖胖</div>
-        </div>
-    </div>
-    <div class="rowline"></div>
-    <!-- 数据 -->
-    <div class="flexcontainer data-list">
-        <div class="flex-item dataposi">
-            <a href="#" class="linka"><img src="../img/eye.png" alt=""></a>
-        </div>
-        <div class=""></div>
-        <div class="flex-item dataposi">
-             <a href="#" class="linka"><img src="../img/good.png" alt=""></a>
-        </div>
-        <div class="flex-item dataposi">
-             <a href="#" class="linka"><img src="../img/message.png" alt=""></a>
-        </div>
-    </div>
-    <!-- 空白横条 -->
-    <div class="blackspace"></div>
-    <div class="sharepic">
-        <a href="#"><img src="../img/pic3.jpg" alt="产品图" width="100%"></a>
-    </div>
-</div>
-<!-- 脚部footer -->
-<div class="footer flexcontainer">
-    <div class="flex-item">
-        <div class="buttonbox buttonbox1" >
-             <a id="a1" class="buttononNav"><!-- <img src="../img/home2.png" alt="首页" width="20rem" class="homeimg"> --></a>
-        </div>
-    </div>
-    <div class="flex-item">
-        <div class="buttonbox buttonbox2" >
-            <a><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
-        </div>
-    </div>
-    <div class="flex-item">
-        <div class="buttonbox buttonbox3">
-            <a><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
-        </div>
-    </div>
-    <div class="flex-item">
-        <div class="buttonbox buttonbox4">
-             <a><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
-        </div>
-    </div>
-</div>
 <script src="../js/zepto.min.js"></script>
 <script src="../js/mggScrollImg.js"></script>
 <script>
@@ -146,13 +146,13 @@
             }
         });
     })()
-          
-    $(".footer .flex-item .buttonbox a").click(function() {
+    // 实现footer点击图片变换效果      
+    // $(".footer .flex-item .buttonbox a").click(function() {
 
-    $(".footer .flex-item .buttonbox a").removeClass("buttononNav");
-        $(this).addClass("buttononNav");
-    });
+    // $(".footer .flex-item .buttonbox a").removeClass("buttononNav");
+    //     $(this).addClass("buttononNav");
+    // });
     
 </script>
 </body>
-</html>s
+</html>
