--- a/html/ttw.html
+++ b/html/ttw.html
@@ -66,7 +66,7 @@
 			height: 0px;
 		}
 		.headpart{
-			margin-top: 2rem;
+			margin-top: 0rem;
 		}
 		
     </style>
@@ -81,7 +81,7 @@
 		<a href="#" data-role="button" data-shadow="false"style="color:#FC5FA8;background-color:#fff;border-color:#fff;border-radius:100%">添加</a> -->
 <!-- >>>>>>> 1f022e852c5f0e6c07879ebdef36e00fcb547058 -->
 		<h2>个人中心</h2> 
-		<a href="#pagetwo" data-role="button" data-shadow="false"style="color:#FC5FA8;border-color:#fff;border-radius:100%">设置</a>
+		<a href="#pagetwo" data-role="button" data-shadow="false"style="color:#FC5FA8;border-color:#fff;border-radius:100%" data-ajax="false">设置</a>
 		</div>
 		<div data-role="content" style="background-color:#fff;">
 			<div class="headpart">
@@ -139,7 +139,7 @@
 				<a href="#" style="color:#666;"><img src="../img/9.png"alt="致用户的一封信"class="ui-li-icon">致用户的一封信</a>
 			</li>
 		</ul>
-		<div data-role="footer"data-position="fixed"></div>
+		<!-- <div data-role="footer"data-position="fixed"></div> -->
 		</div>
 		
 	</div>
