--- a/html/ttw.html
+++ b/html/ttw.html
@@ -99,8 +99,8 @@
 				<img src="../img/head1.png" alt="头像" width="100%">
 			</div> -->
 			<div data-role="controlgroup" data-type="horizontal" style="padding-left:20px;">					
-						<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">心得</a>
-						<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">点评</a>
+						<a href="login.html" data-role="button" data-shadow="false"data-mini="true"data-corners="false" target="toppage">登录</a>
+						<a href="register.html" data-role="button" data-shadow="false"data-mini="true"data-corners="false" target="toppage">注册</a>
 						<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">关注</a>
 						<a href="#" data-role="button" data-shadow="false"data-mini="true"data-corners="false">粉丝</a>
 			</div>
