--- a/html/footer.html
+++ b/html/footer.html
@@ -29,7 +29,7 @@
         </div>
         <div class="flex-item">
             <div class="buttonbox buttonbox3">
-                <a href="login.html" target="toppage"><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
+                <a href="gsp.html" target="toppage"><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
             </div>
         </div>
         <div class="flex-item">
