--- a/html/register.html
+++ b/html/register.html
@@ -12,56 +12,6 @@
 	<meta name="keywords" content="seokeywords"/>
 	<meta name="description" content="seodescription"/>
 	<link rel="stylesheet" href="../css/register.css">
-	<script type="text/javascript">
-		// function register(){
-		// 	var email=document.getElementById("email").value;
-		// 	var userName=document.getElementById("userName").value;
-		// 	var pwd=document.getElementById("pwd").value;
-		// 	var repwd=document.getElementById("repwd").value;
-		// 	var matchResult=true;
-		// 	var mailreg=\w[-\w.+]*@([A-Za-z0-9][-A-Za-z0-9]+\.)+[A-Za-z]{2,14};
-		// 	if(email==""||userName==""||pwd==""repwd==""){
-		// 		alert("请将信息填写完整！");
-		// 		matchResult=false;
-		// 	}else if (!email.match)
-		// }
-		var email=document.getElementById("email").value;
-		var userName=document.getElementById("userName").value;
-		var pwd=document.getElementById("pwd").value;
-		var repwd=document.getElementById("repwd").value;
-		// var matchResult=true;
-		// var mailreg=\w[-\w.+]*@([A-Za-z0-9][-A-Za-z0-9]+\.)+[A-Za-z]{2,14};
-		var check=function(){
-			if(!document.getElementById("email").checkValidity()){
-				document.getElementById("email").setCustomValidity("邮箱格式不正确！");
-
-			}
-			if(!document.getElementById("userName").checkValidity()){
-				document.getElementById("userName").setCustomValidity("用户名格式不正确！");
-			}
-			if(!document.getElementById("pwd").checkValidity()){
-				document.getElementById("pwd").setCustomValidity("密码长度为6~16个字符！")
-			}
-			if(!document.getElementById("repwd").checkValidity()){
-				document.getElementById("repwd").setCustomValidity("密码长度为6~16个字符！")
-			}
-			if(repwd.value != pwd.value){
-				document.getElementById("repwd").setCustomValidity("两次输入的密码不匹配！")
-			}
-			// if(repwd.value !=pwd.value){
-			// 	repwd.setCustomValidity("两次输入的密码不匹配！");
-			// }else{
-			// 	repwd.setCustomValidity("");
-			// }
-		
-		}
-		// var checkPwd=function(){
-		// 	  if (repwd.value != pwd.value)
-  //           repwd.setCustomValidity("两次输入的密码不匹配");
-  //       else
-  //           repwd.setCustomValidity("");
-		// }
-	</script>
 </head>
 <body>
 	<!-- 头部 -->
@@ -73,38 +23,33 @@
 		</div>
 		<div class="headerbox">
 		注册
-			<!-- <p class="header-text">去淘宝口碑排名</p> -->
 		</div>
-		<!-- <div class="moreposi">
-			<a href="#" class="linka">
-				<img src="../img/more.png" alt="更多" width="100%">
-			</a>
-		</div> -->
 	</div>
-	<!-- 注册部分 -->
-	<form action="ttw.html" method="post">
+	<form>
 		<div class="registerbox">
 			<div class="emailbox">
-				<input type="text" id="email" class="inputbox" placeholder="请输入邮箱" required pattern="\w[-\w.+]*@([A-Za-z0-9][-A-Za-z0-9]+\.)+[A-Za-z]{2,14}"/>
+				<input type="text" id="email" class="inputbox" placeholder="请输入邮箱" required="required" pattern="\w[-\w.+]*@([A-Za-z0-9][-A-Za-z0-9]+\.)+[A-Za-z]{2,14}"/ title="邮箱格式不正确">
 			</div>
 			<div class="rowline"></div>
 			<div class="namebox">
-				<input type="text" class="inputbox" placeholder="昵称" id="userName" required pattern="[A-Za-z0-9_\-\u4e00-\u9fa5]+"/>
+				<input type="text" class="inputbox" placeholder="昵称" id="userName" required="required" pattern="[A-Za-z0-9_\-\u4e00-\u9fa5]+" title="用户名格式不正确"/>
 			</div>
 			<div class="rowline"></div>
 			<div class="password">
-				<input type="password" class="inputbox" placeholder="请输入密码" id="pwd"  required pattern="^[\w\W]{6,16}$" />
+				<input type="password" class="inputbox" placeholder="请输入密码" id="pwd"  required="required" pattern="^[\w\W]{6,16}$" title="密码长度为6~16个字符"/>
 			</div>
 			<div class="rowline"></div>
 			<div class="password">
-				<input type="password" class="inputbox" placeholder="再次确认密码" id="repwd" required pattern="^[\w\W]{6,16}$" />
+				<input type="password" class="inputbox" placeholder="再次确认密码" id="repwd" required="required" pattern="^[\w\W]{6,16}$" title="密码长度为6~16个字符" />
 			</div>
 		</div>
 		<div class="buttonbox">
-			<!-- <a href="../index.html" onsubmit="return register()" method="post"> -->
-				<button class="buttontext" type="submit" onclick="document.passwordChange.password1.checkValidity()">立即注册</button>
-			<!-- </a> -->
+				<input type="submit" onclick="checkRegisterinfo();" value="立即注册" class="buttontext">
 		</div>
 	</form>
+	<script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
+	<script src="../js/bmob-min.js"></script>
+	<script src="../js/bmobSocketIo-min.js"></script>
+	<script src="../js/register.js" type="text/javascript"></script>
 </body>
 </html>
