--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
        <div class="imgbox1">
            <img src="img/indeximg1.png" alt="首页美妆图片广告" height="100%" width="100%">
        </div>
-       <div class="imgbox2">
+      <!--  <div class="imgbox2">
            <img src="img/indeximg2.png" alt="首页logo" height="100%" width="100%">
        </div>
-    
+     -->
         <!-- <div class="bottom-box"></div> -->
     <!-- </div> -->
 </body>
