--- a/html/firstpage.html
+++ b/html/firstpage.html
@@ -16,7 +16,7 @@
     <!-- 轮播图片 -->
     <div class="imgbox"> 
         <ul>
-            <li><a href="#"><img src="../img/1.jpg" width="100%"></img></a></li>
+            <li><a href="#"><img src="../img/3.jpg" width="100%"></img></a></li>
             <li><a href="#"><img src="../img/2.jpg" width="100%"></img></a></li>
             <li><a href="#"><img src="../img/4.jpg" width="100%"></img></a></li>
         </ul>
@@ -27,9 +27,6 @@
         <div class="flex-item">
             <a href="../html/searchpart.html"><img src="../img/menu1.png" alt="产品库" width="55rem"></a>
         </div>
-        <!-- <div class="flex-item">
-            <a href="#"><img src="../img/menu2.png" alt="学习化妆" width="55rem"></a>
-        </div> -->
         <div class="flex-item">
             <a href="../html/test.html"><img src="../img/menu3.png" alt="产品试用" width="55rem"></a>
         </div>
@@ -43,15 +40,15 @@
     <!-- 空白横条 -->
     <div class="blackspace"></div>
     <!-- 显示分享 -->
-    <div>
+    <div style="display:hidden;" id="posthidden">
         <!-- 头像栏 -->
         <div class="personinfo flexcontainer">
              <div class="pi-head"> <!--头像-->
                 <img src="../img/head1.png" alt="头像" width="100%" height="100%">
             </div>
             <div class="pi-info">
-                <div class="pi-title">爱丽小屋小烟熏</div>
-                <div class="pi-name">小熊胖胖</div>
+                <div class="pi-title">口红</div>
+                <div class="pi-name">123</div>
             </div>
         </div>
         <div class="rowline"></div>
@@ -70,7 +67,7 @@
         <!-- 空白横条 -->
         <div class="blackspace"></div>
         <div class="sharepic">
-            <a href="#"><img src="../img/pic3.jpg" alt="产品图" width="100%"></a>
+            <a href="#"><img src="../img/pic.jpg" alt="产品图" width="100%"></a>
         </div>
     </div>
     <div>
@@ -129,6 +126,7 @@
     </div> -->
 <script src="../js/zepto.min.js"></script>
 <script src="../js/mggScrollImg.js"></script>
+<script src="../js/post.js"></script>
 <script>
 
 (function(){
