--- a/html/footer.html
+++ b/html/footer.html
@@ -29,12 +29,12 @@
         </div>
         <div class="flex-item">
             <div class="buttonbox buttonbox3">
-                <a href="gsp.html" target="toppage"><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
+                <a href="post.html" target="toppage"><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
             </div>
         </div>
         <div class="flex-item">
             <div class="buttonbox buttonbox4">
-                 <a href="ttw.html" target="toppage"><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
+                 <a href="userinfo.html" target="toppage"><!-- <img src="../img/home2.png" alt="首页" width="20rem"> --></a>
             </div>
         </div>
     </div>
