--- a/html/post.html
+++ b/html/post.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>去淘宝</title>
 	<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css">
-	<script src="../js/jquery-1.11.3.min.js"></script>
-    <script src="../js/jquery.mobile-1.4.5.min.js"></script>
+	
     <style>
     	.linka{
     	    display: block;
@@ -39,40 +38,29 @@
     </style>
 </head>
 <body>
-<!-- <<<<<<< HEAD -->
-<!-- 	<div data-role="page" id="pageone" style="background-color:#fff;">
-		<div data-role="header" data-theme="f">
-		<div class="header">
-			<div class="backposi">
-			<a href="../index.html" class="linka" >
-				<img src="../img/back.png" alt="返回" width="100%">
-			</a>
-		</div>
-		<div class="totetext"></div>
-		<div class="moreposi">
-			<a href="#" class="linka">
-				<img src="../img/more.png" alt="更多" width="100%">
-			</a>
-		</div> -->
-			<!-- <a href="../index.html" data-role="button"data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#FB944E;border-radius:100%;" data-ajax="false">返回</a> -->
-<!-- ======= -->
 	<div data-role="page" id="pageone" style="background-color:#fff;color:#F93AA2;">
 		<div data-role="header" style="color:#F93AA2;">
 			<a href="../html/firstpage.html" data-role="button"data-shadow="false" data-theme="d" data-mini="true" style="background-color:#fff;color:#999;border-color:#fff;border-radius:100%;" data-ajax="false">返回</a>
-<!-- >>>>>>> 1f022e852c5f0e6c07879ebdef36e00fcb547058 -->
 			<h2>我的美丽秘密</h2>
-			<a href="#pagethr" data-role="button" data-shadow="false" data-theme="d" data-mini="true" data-rel="dialog"style="background-color:#fff;color:#999;border-color:#fff;border-radius:100%;">发布</a>
+			<button href="#" data-role="button" data-shadow="false" data-theme="d" data-mini="true" style="display:inline; background-color:#fff;color:#999;border-color:#fff;border-radius:100%;" onclick="post();">发布</button>
 		</div>
 		<div data-role="content" data-theme="f" style="background-color:#fff;">
-		    <div class="cover" style="height:150px;">
-		    	<a href="#" data-role="button" data-shadow="false" data-inline="true"style="background-color:#fff;border-color:#fff;color:#CECACA;left:138px;top:30px;">设置封面</a>
+			 <div>
+		   		<input type="text" placeholder="搜索标签" style="height:30px; width=200px;" id="productnameLable">
+		   		<!-- <a href="#" data-rola="button">搜索</a> -->
+		   </div>
+		    <div class="cover" style="height:100px;">
+		    	<input type="file" id="uploadImg" value="上传封面图片"  placeholder="上传封面图片">
+		    	<!-- <a href="#" data-role="button" data-shadow="false" data-inline="true"style="background-color:#fff;border-color:#fff;color:#CECACA;left:138px;top:30px;">设置封面</a> -->
 		    </div>
-		    <a href="#pagetwo" data-role="button" data-shadow="false" data-inline="true" data-transition="slide" data-mini="true" style="border-color:#fff;background-color:#F93AA2;color:#fff;font-weight:lighter;">#选择标签</a>
-		    <div>
-		   		<label for="fname" class="ui-hidden-accessible">分享你的美丽秘密吧……</label>
-				<textarea name="share" id="share" placeholder="分享你的美丽秘密吧……"></textarea>
-		    	<a href="#" data-role="button"data-shadow="false" data-corners="false" style="background-color:#fff;border-color:#fff;position:fixed;left:10px;padding:0 220px 0 0;"><img src="../img/add.png"></a>
+		     <div>
+		   		<!-- <label for="fname" class="ui-hidden-accessible">分享你的美丽秘密吧……</label> -->
+				<textarea name="share" id="share" placeholder="分享你的美丽秘密吧……"></textarea style="min-height:200px;">
+		    	<!-- <a href="#" data-role="button"data-shadow="false" data-corners="false" style="background-color:#fff;border-color:#fff;position:fixed;left:10px;padding:0 220px 0 0;"> -->
 		    </div>
+		   <!--  <a href="#pagetwo" data-role="button" data-shadow="false" data-inline="true" data-transition="slide" data-mini="true" style="border-color:#fff;background-color:#F93AA2;color:#fff;font-weight:lighter;">#选择标签</a>
+		   -->
+		   
 		</div>
 		
 	</div>
@@ -125,10 +113,15 @@
 		<div data-role="header"style="background:#F93AA2;color:#FFFFFF;">
 			<h4>消息提示</h4>
 		</div>
-		<div data-role="content"style="color:#F93AA2;background-color:#FFFFFF;margin:0 20px 0 35px;font-weight:300;" >
+		<div data-role="content" style="color:#F93AA2;background-color:#FFFFFF;margin:0 20px 0 35px;font-weight:300;" >
 			<img src="../img/main.gif">
 			<h4>发布成功！</h4>
 		</div>
 	</div>
+	<script src="../js/jquery-1.11.3.min.js"></script>
+    <script src="../js/jquery.mobile-1.4.5.min.js"></script>
+    <script src="../js/bmob-min.js"></script>
+	<script src="../js/bmobSocketIo-min.js"></script>
+    <script src="../js/post.js"></script>
 </body>
 </html>
