--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>最开始的页面</title>
+    <title>去淘宝</title>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content = "width=device-width, target-densitydpi=high-dpi, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -14,19 +14,21 @@
     <link rel="stylesheet" href="css/index.css">
     <!--5秒钟后跳转到指定的页面--> 
     <meta http-equiv="refresh" content="3;url=html/firstframe.html" /> 
-    <script></script> 
+
 </head>
 <body>
     <!-- <div class="imgbox"> -->
        <div class="imgbox1">
-           <img src="img/indeximg1.png" alt="首页美妆图片广告" height="100%" width="100%">
+           <img src="img/index.png" alt="首页美妆图片广告" height="100%" width="100%">
        </div>
-      <!--  <div class="imgbox2">
-           <img src="img/indeximg2.png" alt="首页logo" height="100%" width="100%">
-       </div>
-     -->
-        <!-- <div class="bottom-box"></div> -->
-    <!-- </div> -->
 </body>
-   
+   <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+  <script src="js/bmob-min.js"></script>
+  <script src="js/bmobSocketIo-min.js"></script>
+  <script src="js/register.js" type="text/javascript"></script>
+  <script >
+    Bmob.initialize("4750c76647d59c2cfe99dc4a8a49cfda", "c1b71ebe933cd66cd87e6142a30372cc");
+    BmobSocketIo.initialize("4750c76647d59c2cfe99dc4a8a49cfda");
+
+    </script> 
 </html>
