--- a/html/firstpage.html
+++ b/html/firstpage.html
@@ -67,7 +67,7 @@
         <!-- 空白横条 -->
         <div class="blackspace"></div>
         <div class="sharepic">
-            <a href="#"><img src="../img/pic.jpg" alt="产品图" width="100%"></a>
+            <a href="#"><img src="../img/pic1.jpg" alt="产品图" width="100%"></a>
         </div>
     </div>
     <div>
