--- a/html/userinfo.html
+++ b/html/userinfo.html
@@ -152,11 +152,11 @@
 				<li>
 					<a href="#" style="color:#666;">联系我们</a>
 				</li>
-				<li>
+				<!-- <li>
 					<a href="#" style="color:#666;">致用户的一封信</a>
-				</li>
+				</li> -->
 				</ul>
-				<ul data-role="listview" data-inset="true">
+			<!-- 	<ul data-role="listview" data-inset="true">
 				<li>
 					<a href="#" style="color:#666;">用户协议</a>
 				</li>
@@ -169,7 +169,7 @@
 				<li>
 					<a href="#" style="color:#666;">肤质测试</a>
 				</li>
-				</ul>
+				</ul> -->
 				<ul data-role="listview" data-inset="true">
 				<li>
 					<a href="#pagethr"data-role="button" data-rel="dialog" style="color:#FC629D">退出登录</a>
