--- a/html/login.html
+++ b/html/login.html
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div class="forgetpwd">
-			<P style="float:right;">忘记密码？</P>
+			<P style="float:right;">立即注册</P>
 		</div>
 		<div class="buttonbox">
 			<button type="submit" onclick="checkUser();" class="buttontext">立即登录</button>
