--- a/html/searchpart.html
+++ b/html/searchpart.html
@@ -23,19 +23,17 @@
         </div>
         <div class="partone">
             <div class="se-now">
-                <img src="../img/fp-search.png" alt="se-now" width="100%">
+                <input type="text" style="width:80%;height:30px;margin-top:10px;border-radius:3px; border:1px solid #999;float:left;">
+            <!--     <img src="../img/fp-search.png" alt="se-now" height="35px"> -->
             </div>
             <div class="sousou">
-                <div class="se-btn">
-                    <a href="##">搜一搜</a>
-                </div>
+            <button style="width:50px;height: 30px;position:relative;top:-25px;left:220px;">搜索</button>
+               <!--  <div class="se-btn">
+                    <a href="#">搜一搜</a>
+                </div> -->
             </div>
         </div>
-        <div class="parttwo">
-            <a href="##"><img src="../img/chanpin.png" alt="chanpin" class="img-one"></a>
-            <a href="##"><img src="../img/xinde.png" alt="xinde" class="img-two"></a>
-            <a href="##"><img src="../img/yonghu.png" alt="yonghu" class="img-three"></a>
-        </div>
+       
         <div class="sr-blank"></div>
         <div class="partthree">
             <div class="title">
