--- a/html/totelist1.html
+++ b/html/totelist1.html
@@ -22,11 +22,6 @@
 			</a>
 		</div>
 		<div class="totetext"></div>
-		<!-- <div class="moreposi">
-			<a href="#" class="linka">
-				<img src="../img/more.png" alt="更多" width="100%">
-			</a>
-		</div> -->
 		
 	</div>
 	<!-- 图片 -->
@@ -36,35 +31,35 @@
 	<div class="rowline" width="85%"></div>
 	<!-- 彩妆分类 -->
 	<div class="ds-classify">
-		<a href="#">
+		<a href="hflist.html">
 			<img  class="ds-one" src="../img/ds-geli.png" alt="彩妆大赏" width="25%">
 		</a>
-		<a href="#">
+		<a href="hflist.html">
 			<img src="../img/ds-fendi.png" alt="彩妆大赏" width="25%">
 		</a>
-		<a href="#">
+		<a href="hflist.html">
 			<img src="../img/ds-mifen.png" alt="彩妆大赏" width="25%">
 		</a>
 	</div>
 	<div class="ds-classify">
-		<a href="#">
+		<a href="hflist.html">
 			<img  class="ds-one" src="../img/ds-yanying.png" alt="彩妆大赏" width="25%">
 		</a>
-		<a href="#">
+		<a href="hflist.html">
 			<img src="../img/ds-jiemaogao.png" alt="彩妆大赏" width="25%">
 		</a>
-		<a href="#">
+		<a href="hflist.html">
 			<img src="../img/ds-saihong.png" alt="彩妆大赏" width="25%">
 		</a>
 	</div>
 	<div class="ds-classify">
-		<a href="#">
+		<a href="hflist.html">
 			<img  class="ds-one" src="../img/ds-chungao.png" alt="彩妆大赏" width="25%">
 		</a>
-		<a href="#">
+		<a href="hflist.html">
 			<img src="../img/ds-huazhuangshua.png" alt="彩妆大赏" width="25%">
 		</a>
-		<a href="#">
+		<a href="hflist.html">
 			<img src="../img/ds-zhijiayou.png" alt="彩妆大赏" width="25%">
 		</a>
 	</div>
